Fix spacing with on .feature w/ :after function

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -169,7 +169,13 @@ nav a:hover {
 	text-align: left;
 	padding: 0px 0px 0px 0px;
 	font-family: 'Roboto Mono',monospace; 
+	text-align: justify;
+}
 
+.feature:after {
+	content: '';
+	width: 100%;
+	display: inline-block;
 }
 
 .f-top {
@@ -179,13 +185,14 @@ nav a:hover {
 	margin-bottom: 30px; 
 }
 
+
 .middle-img {
 	width: 100%;
 }
 
 .f-bottom {
 	display: inline-block;
-	width: 30%;
+	width: 32%;
 	margin-top: 30px; 
 	margin-bottom: 30px; 
 }
